--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,7 +21,7 @@ twitter: 'shreyas_vinaya'
 # Contact (edit or remove options as required)
 
 email: shreyas.college@gmail.com
-phone: +91 8660728506
+# phone: +91 8660728506
 #address:
 #  street: 450 Serra Mall
 #  city: Stanford
@@ -83,7 +83,7 @@ privacy_pack: false
 edit_page:
   repo_url: ''
   content_dir: ''
-  repo_branch: main
+  repo_branch: master
   editable:
     page: false
     post: false
