--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -7,7 +7,7 @@
 
 theme: minimal
 day_night: true
-font: ''
+font: minimal
 font_size: L
 
 # SEO
@@ -77,9 +77,11 @@ address_format: en-us
 highlight: true
 highlight_languages:
   - r
-math: false
+math:
+    enable: false
+privacy_pack:
+  enable: false
 diagram: false
-privacy_pack: false
 edit_page:
   repo_url: ''
   content_dir: ''
@@ -104,7 +106,7 @@ copyright_license:
   allow_derivatives: false
   share_alike: true
   allow_commercial: false
-  notice: 'This work is licensed under {license}'
+  notice: '@ {year} Shreyas V. This work is licensed under {license}'
 abstract_length: 135
 plugins_js: []
 avatar:
